--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Sadhana Tracker</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Sadhana Tracker – Stable Base</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
@@ -10,125 +10,83 @@
 
   <style>
     body {
-      margin: 0;
       font-family: Arial, sans-serif;
       background: #000080;
-      min-height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
+      min-height: 100vh;
+      margin: 0;
     }
     .card {
       background: white;
-      color: #000080;
       padding: 20px;
-      border-radius: 12px;
-      width: 95%;
-      max-width: 900px;
+      border-radius: 10px;
+      width: 90%;
+      max-width: 400px;
+      color: #000080;
     }
-    h3 { text-align:center; margin-top:0 }
-    .tabs { display:flex; margin-bottom:15px }
-    .tab {
-      flex:1; text-align:center; padding:10px;
-      cursor:pointer; border-bottom:3px solid transparent;
-    }
-    .tab.active {
-      border-bottom:3px solid #000080;
-      font-weight:bold;
-    }
-    label { font-size:13px; display:block; margin-top:8px }
+    h3 { text-align: center; }
+    label { display: block; margin-top: 10px; font-size: 14px; }
     input, select {
-      width:100%; padding:6px; margin-top:4px;
+      width: 100%;
+      padding: 6px;
+      margin-top: 4px;
     }
     button {
-      padding:8px 12px;
-      margin-top:10px;
-      background:#000080;
-      color:white;
-      border:none;
-      cursor:pointer;
-    }
-    table {
-      width:100%; border-collapse:collapse;
-      font-size:13px; margin-top:10px;
-    }
-    th, td {
-      border:1px solid #ddd;
-      padding:6px;
-      text-align:center;
-    }
-    th { background:#f0f0f0 }
-    .month-box {
-      background:#f7f7f7;
-      padding:8px;
-      border-radius:6px;
-      margin-bottom:10px;
-      font-size:14px;
-    }
-    .week-line {
-      padding:4px 0;
-    }
-    .danger {
-      color:#b00000;
-      font-weight:bold;
+      margin-top: 12px;
+      width: 100%;
+      padding: 8px;
+      background: #000080;
+      color: white;
+      border: none;
+      cursor: pointer;
     }
   </style>
 </head>
 
 <body>
 
-<div class="card">
-  <h3>Sadhana Tracker</h3>
+<div class="card" id="authCard">
+  <h3>Login</h3>
+  <input id="email" placeholder="Email">
+  <input id="password" type="password" placeholder="Password">
+  <button onclick="login()">Login</button>
+</div>
 
-  <div class="tabs">
-    <div class="tab active" id="tabSadhana" onclick="showTab('sadhana')">Sadhana</div>
-    <div class="tab" id="tabScores" onclick="showTab('scores')">Scores</div>
-  </div>
+<div class="card" id="sadhanaCard" style="display:none;">
+  <h3>Daily Sadhana</h3>
 
-  <!-- SADHANA TAB -->
-  <div id="sadhanaTab">
-    <label>Date</label>
-    <select id="dateSelect"></select>
+  <label>Date</label>
+  <select id="dateSelect"></select>
 
-    <label>Sleep Time</label>
-    <input type="time" id="sleepTime">
+  <label>Sleep Time</label>
+  <input type="time" id="sleepTime">
 
-    <label>Wake-up Time</label>
-    <input type="time" id="wakeTime">
+  <label>Wake Time</label>
+  <input type="time" id="wakeTime">
 
-    <label>Chanting Completion</label>
-    <input type="time" id="chantingTime">
+  <label>Chanting Completion</label>
+  <input type="time" id="chantingTime">
 
-    <label>Reading (minutes)</label>
-    <input type="number" id="reading">
+  <label>Reading (minutes)</label>
+  <input type="number" id="reading">
 
-    <label>Hearing (minutes)</label>
-    <input type="number" id="hearing">
+  <label>Hearing (minutes)</label>
+  <input type="number" id="hearing">
 
-    <label>Day Sleep (minutes)</label>
-    <input type="number" id="daySleep">
+  <label>Day Sleep (minutes)</label>
+  <input type="number" id="daySleep">
 
-    <button onclick="submitSadhana()">Submit Sadhana</button>
-    <button onclick="logout()">Logout</button>
-  </div>
-
-  <!-- SCORES TAB -->
-  <div id="scoresTab" style="display:none">
-    <div id="monthlySummary"></div>
-
-    <h4>Current Week</h4>
-    <div id="currentWeek"></div>
-
-    <h4 style="margin-top:15px">Previous Weeks</h4>
-    <div id="previousWeeks"></div>
-  </div>
+  <button onclick="submitSadhana()">Submit</button>
+  <button onclick="logout()">Logout</button>
 </div>
 
 <script>
   const firebaseConfig = {
     apiKey: "AIzaSyDbRy8ZMJAWeTyZVnTphwRIei6jAckagjA",
     authDomain: "sadhana-tracker-b65ff.firebaseapp.com",
-    projectId: "sadhana-tracker-b65ff.firebaseapp.com",
+    projectId: "sadhana-tracker-b65ff",
     appId: "1:926961218888:web:db8f12ef8256d13f036f7d"
   };
 
@@ -137,33 +95,40 @@
   const db = firebase.firestore();
   let uid = null;
 
-  function showTab(tab) {
-    sadhanaTab.style.display = tab === "sadhana" ? "block" : "none";
-    scoresTab.style.display = tab === "scores" ? "block" : "none";
-    tabSadhana.classList.toggle("active", tab === "sadhana");
-    tabScores.classList.toggle("active", tab === "scores");
-    if (tab === "scores") loadScores();
-  }
+  auth.onAuthStateChanged(user => {
+    if (user) {
+      uid = user.uid;
+      authCard.style.display = "none";
+      sadhanaCard.style.display = "block";
+      setupDates();
+    } else {
+      authCard.style.display = "block";
+      sadhanaCard.style.display = "none";
+    }
+  });
 
   function setupDates() {
     dateSelect.innerHTML = "";
-    const t = new Date();
+    const today = new Date();
     for (let i = 0; i <= 2; i++) {
-      const d = new Date(t);
-      d.setDate(t.getDate() - i);
+      const d = new Date(today);
+      d.setDate(today.getDate() - i);
       const v = d.toISOString().slice(0,10);
-      const o = document.createElement("option");
-      o.value = v;
-      o.text = v;
-      dateSelect.appendChild(o);
+      const opt = document.createElement("option");
+      opt.value = v;
+      opt.text = v;
+      dateSelect.appendChild(opt);
     }
   }
 
-  auth.onAuthStateChanged(user => {
-    if (!user) return;
-    uid = user.uid;
-    setupDates();
-  });
+  function login() {
+    auth.signInWithEmailAndPassword(email.value, password.value)
+      .catch(e => alert(e.message));
+  }
+
+  function logout() {
+    auth.signOut();
+  }
 
   async function submitSadhana() {
     await db.collection("users").doc(uid)
@@ -174,98 +139,8 @@
         reading: reading.value,
         hearing: hearing.value,
         daySleep: daySleep.value
-      }, { merge:true });
-    alert("Saved");
-  }
-
-  function logout() { auth.signOut(); }
-
-  /* ---------- SCORES ---------- */
-  async function loadScores() {
-    const snap = await db.collection("users").doc(uid).collection("sadhana").get();
-    const data = {};
-    snap.forEach(d => data[d.id] = d.data());
-
-    const weeks = groupByWeek(data);
-    renderMonthlySummary(weeks);
-    renderCurrentWeek(weeks.current);
-    renderPreviousWeeks(weeks.previous);
-  }
-
-  function renderMonthlySummary(weeks) {
-    const now = new Date();
-    const monthName = now.toLocaleString("default", { month:"long", year:"numeric" });
-    let html = `<div class="month-box"><b>${monthName}</b>`;
-    Object.keys(weeks.previous).forEach(w => {
-      html += `<div class="week-line">• ${w}</div>`;
-    });
-    html += "</div>";
-    monthlySummary.innerHTML = html;
-  }
-
-  function renderCurrentWeek(data) {
-    currentWeek.innerHTML = renderWeekTable(data);
-  }
-
-  function renderPreviousWeeks(weeks) {
-    previousWeeks.innerHTML = "";
-    Object.keys(weeks).forEach(k => {
-      const div = document.createElement("div");
-      div.className = "month-box";
-      div.innerText = k;
-      div.onclick = () => {
-        div.innerHTML = `<b>${k}</b>` + renderWeekTable(weeks[k]);
-      };
-      previousWeeks.appendChild(div);
-    });
-  }
-
-  function renderWeekTable(rows) {
-    let html = "<table><tr><th>Date</th><th>Sleep</th><th>Wake</th><th>Chant</th><th>Read</th><th>Hear</th><th>DaySleep</th></tr>";
-    rows.forEach(r => {
-      html += `<tr>
-        <td>${r.date || ""}</td>
-        <td>${r.sleepTime || "NR"}</td>
-        <td>${r.wakeTime || "NR"}</td>
-        <td>${r.chantingTime || "NR"}</td>
-        <td>${r.reading || "NR"}</td>
-        <td>${r.hearing || "NR"}</td>
-        <td>${r.daySleep || "NR"}</td>
-      </tr>`;
-    });
-    html += "</table>";
-    return html;
-  }
-
-  function groupByWeek(data) {
-    const now = new Date();
-    const start = new Date(now);
-    start.setDate(now.getDate() - now.getDay());
-    const end = new Date(start);
-    end.setDate(start.getDate() + 6);
-
-    const current = [];
-    const previous = {};
-
-    for (const d in data) {
-      const dt = new Date(d);
-      if (dt >= start && dt <= end) {
-        current.push({ date:d, ...data[d] });
-      } else {
-        const key = weekRange(dt);
-        previous[key] = previous[key] || [];
-        previous[key].push({ date:d, ...data[d] });
-      }
-    }
-    return { current, previous };
-  }
-
-  function weekRange(d) {
-    const s = new Date(d);
-    s.setDate(d.getDate() - d.getDay());
-    const e = new Date(s);
-    e.setDate(s.getDate() + 6);
-    return s.toISOString().slice(0,10) + " → " + e.toISOString().slice(0,10);
+      }, { merge: true });
+    alert("Sadhana saved");
   }
 </script>
 
